# muse

./: ARCHITECTURE.md  CLAUDE.md  README.md  vercel.json
.claude/: settings.json
TXDK/: .gitignore  .mcp.json  CLAUDE.md  README.md  compose.yaml  vercel.json
TXDK/.agents/agents/: architect.md  code-reviewer.md  task-planner.md  test-runner.md
TXDK/.agents/references/: architecture-example.md  architecture-template.md  background-tasks.md
TXDK/api/: album-cover.py  generate.py
TXDK/sunobrain/: compose.yaml  sunobrain.compose.yaml
TXDK/sunobrainapi/: compose.yaml  parser.py  pyproject.toml  sunobrainapi.compose.yaml  sunobrainapi.py
api/: album-cover.py  generate.py  regenerate.py
api/_shared/: parser.py  prompts.py
dev-server/: parser.py  pyproject.toml  server.py
frontend/: App.tsx  index.css  index.html  index.tsx  package-lock.json  package.json  types.ts
frontend/components/: AlbumCover.tsx  AnalysisSection.tsx  ApiKeyModal.tsx  BuilderPanel.tsx  CharCount.tsx  CollapsibleCard.tsx  CopyButton.tsx  ErrorBoundary.tsx  ExcludeOutput.tsx  GenreSelector.tsx  GuidedTour.tsx  InputPanel.tsx  LibraryView.tsx  LoadingAnimation.tsx  LoadingView.tsx  LyricsOutput.tsx  OneshotPanel.tsx  OutputPanel.tsx  PlainLyricsOutput.tsx  SettingsView.tsx  SongCard.tsx  SongDetailView.tsx  SongTitle.tsx  StyleOutput.tsx  TopModeToggle.tsx  WelcomeScreen.tsx
frontend/hooks/: useGenerate.ts  useLocalStorage.ts  useSavedStyles.ts  useSongLibrary.ts
frontend/services/: apiClient.ts
frontend/theme/: ThemeContext.tsx  theme.ts
frontend/utils/: songTitle.ts
(+90 files in other folders)
